# todo_app

./: Cargo.toml  readme.md
data/: task_db.sqlite  tasks.json
src/: main.rs  task.rs
