[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Lloyd"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

# web related stuff
rocket = { version = "0.5.0-rc.2", features = ["json"] }

# truly cutting edge version, talk about risk
[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[default.databases.task_db]
url = "/data/tasks.sqlite"
